@@ -2,6 +2,10 @@ Revision history for Perl extension Apache::Request.
 
 =over 4
 
+=item 0.30_02
+
+fixed Apache::Cookie->path bug spotted by Jeffrey W. Baker
+ 
 =item 0.30_01 - January, 27 - 1999
 
 added ApacheRequest_script_name (r->uri minus r->path_info)
